--- a/ENG101 Open Access 2/index.html
+++ b/ENG101 Open Access 2/index.html
@@ -84,8 +84,8 @@
 										<h2>The Stretch Program</h2>
 										<div class="content">
 											<br>
-											<p>Study and practice in critical reading, critical writing, and information literacy
-												with an emphasis on learning how writing is a recursive process that is rhetorically situated.
+											<p>A Two-Quarter ENG 101 with emphasis on providing more time to draft, revise, and discuss writing in low-risk spaces.
+												
 												</p>
 										</div>
 									</a>
@@ -98,7 +98,7 @@
 										<h2>Rhetorical Situations</h2>
 										<div class="content">
 											<br>
-											<p>Exigence, Rhetor, Constraint, Audience, Context</p>
+											<p>Purposes, Rhetors, Constraints, Audiences, and Contexts.</p>
 										</div>
 									</a>
 								</article>
@@ -110,7 +110,7 @@
 										<h2>The Writing Process</h2>
 										<div class="content">
 											<br>
-											<p>Planning, Drafting, Revising, Editing, Inventing, Incubating</p>
+											<p>Planning, Inventing, Drafting, Discussing, Revising, Editing, Incubating</p>
 										</div>
 									</a>
 								</article>
@@ -122,7 +122,7 @@
 										<h2>Discourse Communities</h2>
 										<div class="content">
 											<br>
-											<p>Genre, Lexis, Activity System, Participatory Mechanism</p>
+											<p>Genres, Lexis, Activity Systems, Conventions, Participatory Mechanisms.</p>
 										</div>
 									</a>
 								</article>
@@ -134,7 +134,7 @@
 										<h2>Multimodal Composition</h2>
 										<div class="content">
 											<br>
-											<p>Sound, Image, Text, Animation</p>
+											<p>Sounds, Images, Texts, Animations.</p>
 										</div>
 									</a>
 								</article>
@@ -145,7 +145,7 @@
 									<a href="reading.html">
 										<h2>Critical and Rhetorical Reading</h2>
 										<div class="content">
-											<p></p>
+											<p>Evidences, Bias, Exigence</p>
 										</div>
 									</a>
 								</article>
@@ -156,7 +156,7 @@
 									<a href="research.html">
 										<h2>Research and Writing</h2>
 										<div class="content">
-											<p></p>
+											<p>Secondary and Primary Sources, Annotations, </p>
 										</div>
 									</a>
 								</article>
@@ -165,9 +165,9 @@
 										<img src="images/CWUlibrary1925.png" style="width:500px;height:300px;" alt="" />
 									</span>
 									<a href="handbook.html">
-										<h2>Rhetorical Grammar, Style, and Mechanics </h2>
+										<h2>Style Guide </h2>
 										<div class="content">
-											<p>.</p>
+											<p>Rhetorical Grammar, Style, and Mechanics</p>
 										</div>
 									</a>
 								</article>
