--- a/ENG101 Open Access 2/glossary.html
+++ b/ENG101 Open Access 2/glossary.html
@@ -61,7 +61,7 @@
 <li>Intertextuality (rhetorical and process knowledge): helps explain how authors design texts and how
   texts can be designed. Is a tool for rhetorical analysis and provides a frame for thinking about how
   texts connect and interact with each other. </li>
-<li>Discourse Communities (rhetorical and discourse community): </li>
+<li>Discourse Communities: </li>
 <li>Extensive Writing (process): This helps writers understand that writing about content that is
   unfamiliar can be difficult and require time for research and more drafting. </li>
 <li>Reflexive Writing (process): This helps students understand that they tend to write well about content
@@ -86,6 +86,10 @@
 <li>Writing-to-Communicate</li>
 <li>Composing Process</li>
 <li>Rhetorical Situation</li>
+<li>For Foss et al. (2014) “rhetoric is the human use of symbols to communicate” or “the use of symbols by humans” (p. 1). 
+	They argue that humans create reality through symbols. “Every word choice we make—every perspective we choose to apply—results in seeing 
+	the world one way rather than another. In each case, the experience will be different because of the symbols we use to frame it. 
+	Because we create our worlds through symbols, changing our symbols changes our worlds” (p. 2). </li>
 <li>Exigence</li>
 <li>Kairos</li>
 <li>Rhetors</li>
