--- a/ENG101 Open Access 2/discoursecommunities.html
+++ b/ENG101 Open Access 2/discoursecommunities.html
@@ -87,6 +87,9 @@
 							The Writing Program Adminstration further defines conventions and characteristics for discourse communities in 
 								its statements about writing across contexts.
 						 </p>
+							<h3>Read These Sources about Discourse Communities and Writing across Contexts.</h3>
+							<p><a href="https://writingspaces.org/?page_id=387"target="_blank">"Understanding Discourse Communities"</a> by Dan Melzer</p>
+							
 
 <p>The WPA notes that:</p>
 <p>"Conventions are the formal rules and informal guidelines that define genres, and in so doing,
