--- a/ENG101 Open Access 2/rhetoric.html
+++ b/ENG101 Open Access 2/rhetoric.html
@@ -129,7 +129,8 @@ This is because rhetoric is all about understanding how people communicate. By p
     task? What approaches would you take to address these audiences? Rhetoric gives you a frame to consider these situations and to make
     and to make writing decisions.
 </p>
-							
+							<h3>Listen to the Following Podcast on Rhetoric:</h3>
+							<p><a href="https://anchor.fm/the-big-rhetorical/" target="_blank">The Big Rhetorical Podcast</a> by Charles Woods</p>				
 
     <h3 id="Why is rhetoric important?">Why Is Rhetoric Important?</h3>
     <p>You are probably wondering why you should study rhetoric. You're probably asking yourself, how does
