--- a/ENG101 Open Access 2/outcomes.html
+++ b/ENG101 Open Access 2/outcomes.html
@@ -80,7 +80,7 @@
 		they will do in and outside of the university. According to the Writing Program Administration (WPA) “Statement and Principles,” writing 
 		courses should focus on teaching students’ rhetorical knowledge, critical thinking, writing process knowledge, knowledge of conventions 
 		and genres across disciplines, and multimodal and multimedia literacies."</p>
-							<h3 id="why is ENG 101 important">Whay Is ENG 101 Important?</h3>
+							<h3 id="why is ENG 101 important?">Whay Is ENG 101 Important?</h3>
 	<p>ENG 101 will provide you with a foundation of writing knowledge based on research and expertise so you can
 		make insightful and coherent decisions about writing across contexts.
 								Expectations for writing built on myth lead to frustrated students.
@@ -94,7 +94,7 @@
 		teaching writing and best practices from the leaders in the field of writing studies. </p>
 		
 							
-							<h3 id="what do we do in ENG 101">What Do We Do ENG 101?</h3>
+							<h3 id="what do we do in ENG 101?">What Do We Do ENG 101?</h3>
 							
 <h3 id="what are ENG 101 outcomes?">ENG 101 Learner Outcomes</h3>
 <p><b>Outcome 1</b>: Identify and analyze how a variety of print, digital, and multimodal texts are rhetorically
