--- a/ENG101 Open Access 2/stretch.html
+++ b/ENG101 Open Access 2/stretch.html
@@ -105,29 +105,30 @@
       <h3 id="general requirements">General Requirement for Stretch</h3>
 <p>All ENG 101A and 101B Courses Should Meet the Following Criteria:</p>
 <ul>
-<li>Students should write at least 8,000 words total across both quarters; these words may include
+<li>Students will write at least 10,000 words total across both quarters; these words may include
   reflective and in-class writing, writing to learn activities, formal writing projects, multimodal
   and digital writing activities, and revised writing assignments and drafts.</li>
 <li>Over two quarters, stretch students will read approximately 500-600 pages of writing appropriate
-  to college proficiency level, including articles, essays, book chapters, and web and multimedia sources.</li>
+  to college proficiency level, including articles, essays, book chapters, and web and multimedia sources and their own writing and the writing from their classmates.</li>
 <li>Students will complete at least four formal high-stakes writing projects across both quarters. </li>
 <li>At least 60% of the course assignments should be revision-based assignments. </li>
-<li>High-stakes assignments should include multiple drafts with numerous opportunities for students to
+<li>High-stakes assignments must include multiple drafts with numerous opportunities for students to
   revise and to get formative feedback. </li>
 <li>Students will develop proficiency in written English and learn more about the writing process and how
   writing functions across disciplinary contexts.</li>
-<li>Assignments, readings, and/or class activities should enable students to learn to use a variety of
+<li>Assignments, readings, and/or class activities will enable students to learn to use a variety of
   rhetorical principles including audience, context, style, arrangement, invention, incubation, and purpose
   to enhance the cogency and clarity of their writing. </li>
-<li>Students should learn how to conduct research, to examine all types of sources, and to use appropriate
-  documentation formats to interject that research into their writing and multimedia presentations. </li>
-<li>Students should engage with multiple perspectives and respond to and ethically incorporate the ideas of others. </li>
+<li>Students will learn how to conduct research, examine different types of sources, and use appropriate
+  documentation formats for their writing and multimodal projects. </li>
+<li>Students will engage with multiple perspectives. </li>
 </ul>
 
-<p>Please make sure you know and understand your obligation to complete both ENG 101A and 101B.
-  Students must earn a D- or better in ENG 101A in order to enroll in 101B.
-  101A is designed to be an introduction to college reading and writing and students
-  in this course should expect numerous opportunities for writing practice,
+<p>Please make sure you understand your obligation to complete both ENG 101A and 101B to complete the requirements for general education and AWI.
+  Students must earn a D- or better in ENG 101A in order to enroll in 101B. ENG 101A counts as 5 elective credits. 
+	Students need to earn a C- to pass ENG 101B and earn 5 credits for AWI.
+  101A and 101B are designed to be an introduction to college reading and writing. Students
+  in the stretch program will have numerous opportunities for writing practice,
   feedback, and revision. Please remember that the completion of ENG 101B with a C- or better
   satisfies the general education AWI requirement for graduation.</p>
 
@@ -147,11 +148,11 @@
 <p><b>All High-Stakes Assignments in ENG 101A-B must include the following:</b></p>
 <ul>
 <li>Multiple Drafts and Revisions </li>
+	<li>Each High Stakes Paper/Project Cannot Count for More than 25% of the Final Grade</li>
 <li>Relevant Readings to Support Learning</li>
 <li>Integration of Relevant Sources </li>
 <li>Inclusion of Multiple Perspectives </li>
 <li>Formal and Informal Opportunities for Reflection </li>
-<li>Comprise at Least 10% or More of Students’ Final Grade</li>
   </ul>
 
 
