--- a/ENG101 Open Access 2/index.html
+++ b/ENG101 Open Access 2/index.html
@@ -23,7 +23,7 @@
 							<!-- Logo -->
 								<a href="index.html" class="logo">
 									<span class="symbol"><img src="https://www.cwu.edu/sites/default/files/CWU_medallion_logo_2018_color.png"
-										alt="Central Washington Logo with the mountains" width="400" height="500"></span><span class="title">ENG 101 Course Materials</span>
+										alt="Central Washington University Logo with the mountains" width="400" height="500"></span><span class="title">ENG 101 Course Materials</span>
 								</a>
 							<!-- Nav -->
 								<nav>
@@ -65,7 +65,8 @@
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<img src="https://wildcatsports.com/images/2019/8/20/CWU_Logo_Website_Releases.jpg?width=1440&quality=80&format=jpg" style="width:380px;height:300px;" alt="" />
+										<img src="https://wildcatsports.com/images/2019/8/20/CWU_Logo_Website_Releases.jpg?width=1440&quality=80&format=jpg" style="width:380px;height:300px;" 
+										     alt="The Central Washington University Wildcat and CWU logo." />
 
 									</span>
 									<a href="outcomes.html">
@@ -78,7 +79,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/CWU1900-1901.png" style="width:500px;height:300px;" alt="" />
+										<img src="images/CWU1900-1901.png" style="width:500px;height:300px;" alt="An image of a CWU office with desks from the 1900-01 CWU Catalogue. There are three desks in the room and several windows." />
 									</span>
 									<a href="stretch.html">
 										<h2>The Stretch Program</h2>
@@ -92,7 +93,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/CWU1903-04.png" style="width:500px;height:300px;" alt="" />
+										<img src="images/CWU1903-04.png" style="width:500px;height:300px;" alt="An image of a reading room in the library at CWU in 1903 from the 1903-04 CWU Catalogue. There are two large tables in the room and book shelves on several walls in the room." />
 									</span>
 									<a href="rhetoric.html">
 										<h2>Rhetorical Situations</h2>
@@ -104,7 +105,7 @@
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images/CWU1908-09.png" style="width:500px;height:300px;" alt="" />
+										<img src="images/CWU1908-09.png" style="width:500px;height:300px;" alt="An image of a shop room at CWU in 1908 from the 1908-09 CWU catalogue. There are several students in the room standing next to a work desk. There are several desks in the room and an instructor standing at the front of the room." />
 									</span>
 									<a href="process.html">
 										<h2>The Writing Process</h2>
@@ -116,7 +117,7 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/CWU1908-09(2).png" style="width:500px;height:300px;" alt="" />
+										<img src="images/CWU1908-09(2).png" style="width:500px;height:300px;" alt="An image of the training department building being constructed at CWU in 1908 from the 1908-09 CWU catalogue." />
 									</span>
 									<a href="discoursecommunities.html">
 										<h2>Discourse Communities</h2>
@@ -128,7 +129,7 @@
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images/CWU1915-16.png" style="width:500px;height:300px;" alt="" />
+										<img src="images/CWU1915-16.png" style="width:500px;height:300px;" alt="An image of Barge, the main building at CWU, in 1915 from the 1915-16 CWU catalogue." />
 									</span>
 									<a href="multimodal.html">
 										<h2>Multimodal Composition</h2>
@@ -140,7 +141,7 @@
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/CWU1920.png" style="width:500px;height:300px;" alt="" />
+										<img src="images/CWU1920.png" style="width:500px;height:300px;" alt="An image of a play room for kindergarten at CWU in 1920 from the 1920-21 CWU catalogue." />
 									</span>
 									<a href="reading.html">
 										<h2>Critical and Rhetorical Reading</h2>
@@ -151,7 +152,7 @@
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/CWUdrawing.png" style="width:500px;height:300px;" alt="" />
+										<img src="images/CWUdrawing.png" style="width:500px;height:300px;" alt="A handdrawn map of the CWU campus from The CW Seer: A Handbook for New Students in 1941." />
 									</span>
 									<a href="research.html">
 										<h2>Research and Writing</h2>
