--- a/ENG101 Open Access 2/process.html
+++ b/ENG101 Open Access 2/process.html
@@ -59,13 +59,15 @@
 						<li>Planning: The writer generates ideas, picks a topic or argument, collects research or evidence, and plans their paper, sometimes mentally and sometimes using a method such as outlining or idea mapping.</li>
 						<li>Drafting: The writer makes a serious attempt at writing, producing a draft that more or less resembles the finished product.</li>
 						<li>Revising: The writer makes substantial changes to the content or organization of the piece of writing, using feedback from others or their own judgment as guidance.
-							<li>Editing: The writer makes surface-level changes to the new draft, such as changes to sentence structure or word choice.</li>
-							<li>Brainstorming</li>
-							<li>Discussing</li>
-							<li>Peer-Reviewing</li>
-							<li>Feedback</li>
-							<li>Incubation</li>
-							<li>Situational Variables</li>
+							<li>Editing: The writer makes surface-level changes to a piece of writing. Editing may include addressing punctuation, sentence structure, spelling, grammatical and mechanical readability.</li>
+							<li>Brainstorming: The writer spends time thinking about their ideas or topics that interst them. Invention and brainstorming are important parts of the writing process that may occur before planning or at any stage during the process. Exploring your ideas and insights before you 
+						create a focus and question to engage helps you work through those ideas and to shape them before committing to a focus. </li>
+							<li>Discussing: The writer spends time discussing their ideas and writing with their classmates and instructor to obtain ideas and formative feedback that can help students develop their writing.</li>
+							<li>Peer-Reviewing: The writer will produce late stage drafts and participate in a peer reviewing session to learn more about evaluating writing and to recieve formative feedback on a late stage draft. </li>
+							<li>Feedback: The writer will provide and recieve formative feedback on their writing projects. Writers need formative feedback to 
+						make revisions and to develop their ideas. </li>
+							<li>Incubation: The writer needs time away from their writing to think about their ideas and their writing. </li>
+							<li>Situational Variables: The writer needs to account for variables like time constraints, word count, and assignment requirements to manage their writing.</li>
 					</ul>
 					<p>Planning, drafting, revising, and editing are all important parts of writing, and you’ll hear your instructor use these terms often. Contrary to popular belief, however, these activities are not confined to distinct stages that come one after the other, nor are they the only components of a writing process. In fact, the linear writing process you may be familiar with is not a very realistic depiction of what the act of writing involves, for students or professional writers. This is because the writing process is recursive, which means that writers move back and forth between different steps as a piece of writing evolves.</p>
 					<p>You can think of the different parts of the writing process—including the steps in the sequence above—as tools that you can use to craft texts in a variety of situations. Writing process applies to more than just schoolwork. While you might occasionally move between “stages” of the writing process in a linear fashion, you’ll likely find it more helpful to take a flexible approach, going back to certain parts of the writing process, or skipping ahead, as needed. For example, you may decide to spend some more time planning after receiving feedback on a first draft. The recursive nature of the writing process means that all your efforts contribute to forward progress, even if it feels like you’re going backwards sometimes.</p>
