--- a/ENG101 Open Access 2/handbook.html
+++ b/ENG101 Open Access 2/handbook.html
@@ -48,32 +48,32 @@
 						<div class="inner">
 							<h1>The Style Guide</h1>
 <ol>
-	<li><a href="#Sentences"</a>Sentences</li>
-<li><a href="#Paragraphs"</a> Paragraphs</li>
-<li><a href="#Voice"</a> Voice</li>
-<li><a href="#Point of View"</a> POV</li>
-<li><a href="#Punctuation"</a> Punctuation</li>
+	<li><a href="#sentences"</a>Sentences</li>
+<li><a href="#paragraphs"</a> Paragraphs</li>
+<li><a href="#voice"</a> Voice</li>
+<li><a href="#point of view"</a> POV</li>
+<li><a href="#punctuation"</a> Punctuation</li>
 	<li><a href="#quoting"</a> Quoting and Paraphrasing</li>
 	<li><a href="#apacitationguide"</a> APA Style</li>
 	<li><a href="#mlacitationguide"</a> MLA Style</li>
 	</ol>
 
-							<h3 id="Sentence">Sentences</h3>
+							<h3 id="sentences">Sentences</h3>
 
 <p>When writing, most people consider the paragraph the most important form. But the sentence is where all writing begins.</p>
 
-<h3 id="Paragraphs">Paragraphs</h3>
+<h3 id="paragraphs">Paragraphs</h3>
 <p>The formalization of the paragraph dates back to the mid 1800's when Alexander Bain identified several characteristics for paragraphs that we still follow today.
 							Bain believed that all paragraphs singel a central idea and topic sentences. Conventions for creating 
 							paragraphs exist to help writers organize ideas and thoughts and to help readers digest the writing.</p>
 
-<h3 id="Voice">Voice</h3>
+<h3 id="voice">Voice</h3>
 <p></p>
 
-<h3 id="Point of View">Point of View</h3>
+<h3 id="point of view">Point of View</h3>
 <p></p>
 
-<h3 id="Punctuation">Punctuation</h3>
+<h3 id="punctuation">Punctuation</h3>
 <p></p>
 
 							
