--- a/ENG101 Open Access 2/reading.html
+++ b/ENG101 Open Access 2/reading.html
@@ -112,7 +112,7 @@ for students, reading those texts can still be challenging.</p>
 
 <li>Am I keeping an open mind to what the author is trying to say?</li>
 
-<p>Critical reading asks you to engage with the text closely so you can paraphrase, summarize, quote, describe, analyze,
+<p>Critical reading asks you to engage with the text closely so you can <a href="https://danmartin7.github.io/ENG101%20Open%20Access%202/handbook.html#paragraphs">paraphrase</a>, summarize, quote, describe, analyze,
 	interpret, and evaluate the text. Reading rhetorically and critically requires you to move beyond the level of extracting information 
 	and to actively consider the information in relation to purpose, audience, and context. 
 	To read critically, you will need to take it real slow, keep detailed notes, come back and reread the text multiple times. </p>
@@ -138,6 +138,13 @@ audiences receive that discourse? </p>
 <li>What else can we do to improve our critical reading?</li>
 <li>What rhetorical reading strategies?</li>
 </ul>
+	
+	<h3>Sources on Reading Strategies</h3>
+	<ul>
+<li>"Reading Games" by Karen Rosenburg</li>
+<li></li>
+<li></li>
+	</ul>
 </div>
 
 <!-- Scripts -->
