--- a/ENG101 Open Access 2/handbook.html
+++ b/ENG101 Open Access 2/handbook.html
@@ -61,7 +61,8 @@
 
 							<h3 id="sentences">Sentences</h3>
 
-<p>When writing, most people consider the paragraph the most important form. But the sentence is where all writing begins.</p>
+<p>Most people consider the paragraph the most important form of writing. But the sentence is where all paragraph, all writing, really begins. Creating 
+							sentence is a rhetorical process.</p>
 
 <h3 id="paragraphs">Paragraphs</h3>
 <p>The formalization of the paragraph dates back to the mid 1800's when Alexander Bain identified several characteristics for paragraphs that we still follow today.
@@ -69,13 +70,17 @@
 							paragraphs exist to help writers organize ideas and thoughts and to help readers digest the writing.</p>
 
 <h3 id="voice">Voice</h3>
-<p></p>
+<p>Voice </p>
 
 <h3 id="point of view">Point of View</h3>
-<p></p>
+<p>Point of view is rhetorical. First, second, and third person present options for creating objectivity, subjectivity, and perspective. </p>
 
 <h3 id="punctuation">Punctuation</h3>
-<p></p>
+<p>Punctuation is a rhetorical process. A handbook for grammar did not fall from the sky. People made these rules up and then imposed them on other people.
+							Learning how to think about punctuation as a tool you use to create an effect on your writing is important.
+							Punctuation isn't just a set of rules you learn and memorize and then mimic. Making decisions about punctuation
+							should be about a purpose and objective. What are you trying to do with a sentence or paragraph and how does 
+							punctuating that sentence or paragraph help you achieve that goal? </p>
 
 							
 							<h3 id="apacitationguide">APA Citation Style</h3>
@@ -113,15 +118,6 @@
 							an existing understanding of a body of knowledge and reading and 2) to avoid having to cite and quote multiple sources that are not necessarily central to the argument but
 							are important to contextualize the writing and establish the purpose.</p>
 							
-<ul>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-  <li></li>
-</ul>
-
-<p></p>
 
 
 </div>
