--- a/ENG101 Open Access 2/handbook.html
+++ b/ENG101 Open Access 2/handbook.html
@@ -48,15 +48,15 @@
 						<div class="inner">
 							<h1>The Style Guide</h1>
 <ol>
-	<li><a href="#sentences"</a>Sentences</li>
-<li><a href="#paragraphs"</a> Paragraphs</li>
-<li><a href="#voice"</a> Voice</li>
-<li><a href="#point of view"</a> POV</li>
-<li><a href="#punctuation"</a> Punctuation</li>
-	<li><a href="#quoting"</a> Quoting and Paraphrasing</li>
-	<li><a href="#summary"</a> Summarizing</li>
-	<li><a href="#apacitationguide"</a> APA Style</li>
-	<li><a href="#mlacitationguide"</a> MLA Style</li>
+	<li><a href="#sentences">Sentences</a></li>
+<li><a href="#paragraphs">Paragraphs</a></li>
+<li><a href="#voice">Voice</a></li>
+<li><a href="#point of view">POV</a></li>
+<li><a href="#punctuation">Punctuation</li>
+	<li><a href="#quoting">Quoting and Paraphrasing</a></li>
+	<li><a href="#summary">Summarizing</a></li>
+	<li><a href="#apacitationguide">APA Style</a></li>
+	<li><a href="#mlacitationguide">MLA Style</a></li>
 	</ol>
 
 							<h3 id="sentences">Sentences</h3>
