--- a/ENG101 Open Access 2/handbook.html
+++ b/ENG101 Open Access 2/handbook.html
@@ -68,6 +68,91 @@
 <p>The formalization of the paragraph dates back to the mid 1800's when Alexander Bain identified several characteristics for paragraphs that we still follow today.
 							Bain believed that all paragraphs singel a central idea and topic sentences. Conventions for creating 
 							paragraphs exist to help writers organize ideas and thoughts and to help readers digest the writing.</p>
+							<p>"Paragraphs" By Kimberely Smith</p>
+							<p>If you’re like most students, you likely have a lot of experience writing paragraphs. You’ve probably also learned a variety of rules for 
+								composing paragraphs which you may or may not have found helpful. Instruction on paragraph content and organization is practically ubiquitous 
+								in writing handbooks and many high school English classes. But have you ever stopped to consider what a paragraph is really or wondered 
+								how experienced writers use them? This section aims to answer these questions with a level of nuance that will help you succeed in a 
+								college writing context and beyond.</p>
+
+<p>The first thing to know about paragraphs is that they’re notoriously hard to define. The paragraph began as a symbol used in Ancient Greek, but you’re probably more familiar with the paragraph’s modern 
+	form—a group of sentences (or sometimes a single sentence) that is set apart from other paragraphs in a text using spacing or indentation. At the most basic level, this is what a paragraph is. It’s a chunk of 
+	writing that makes up a portion of a larger text. This definition doesn’t offer a lot of information about what a paragraph should contain, however, and that question has been the source of a long-running debate in composition.</p>
+
+<p>The earliest ideas about what a paragraph should include and how it should be structured come from Alexander Bain, who described a paragraph as “a 
+	collection of sentences with unity of purpose” in 1866 (qtd. in Duncan 474). Bain’s writing is where we get a number of strict rules for writing 
+	paragraphs, including the notion that paragraphs should always include topic sentences and that all the sentences in a paragraph should discuss 
+	the same idea. Guidelines for paragraphs can be helpful, especially if you’re writing in a strict time limit or if you’re just learning to write 
+	in an academic context; however, the rules we get from Bain can also be incredibly limiting.</p>
+
+<p>You’ve probably noticed that many good paragraphs don’t follow the so-called “rules” you’re familiar with, and that’s because paragraphs are more 
+	complicated than any formula can capture. If paragraphs can’t be reduced to a single formula, then how should you think about them as a student? 
+	You can understand paragraphs in two ways: as aids for readers and writers and as rhetorical tools governed by discourse conventions.</p>
+
+							<h3>Paragraphs Help Readers Read and Writers Write</h3>
+
+<p>Paragraphs serve a practical purpose for readers and writers. Paragraphs that are visually distinguished from one another make reading a longer text 
+	more approachable. With paragraphs, you’re less likely to lose your place and more likely to be able to follow the writer’s ideas, especially if 
+	the writer has constructed their paragraphs thoughtfully.</p>
+
+<p>Likewise, paragraphs give writers natural breaks during text construction to pause, take stock of what has been written so far, and think ahead to 
+	what might be written next (McGee). While you don’t necessarily have to plan out your paragraph breaks before writing, you can use paragraphs 
+	as a tool to mentally organize your ideas and better manage the complex task of writing.</p>
+
+							<h3>Paragraphs are Tools to Use to Your Advantage</h3>
+
+<p>Paragraphs are also rhetorical tools that writers use to achieve their goals. If you gave a room of professional writers a page full of sentences and 
+	asked them to divide the text into paragraphs, you could expect those writers to each come up with different solutions. Which version was better 
+	would depend on what you intended the finished text to accomplish, but many of the versions, perhaps even all of them, would have merits.</p>
+
+<p>Because there is no single formula for creating a “good” paragraph, there are multiple approaches you can take to paragraphing. You might decide to 
+	start a new paragraph to emphasize a point at the end of the previous paragraph, to signal a transition to a new idea, to break up extended 
+	discussion of a topic into more manageable chunks, or for many other reasons. In other words, you can think about the paragraph as one tool 
+	that you can use for various purposes and contexts.</p>
+
+<p>When deciding how you will use paragraphs in your text, it’s important to remember that paragraphs are governed by genre and the conventions of 
+	discourse communities, just like many other aspects of writing. This means that different audiences have different expectations for 
+	paragraphs. A journalist writing an article in a newspaper might be comfortable writing the occasional single-sentence paragraph because 
+	they are aware that audiences expect shorter bite-sized paragraphs from news articles, especially articles published online. On the other 
+	hand, if a researcher writing an academic article made the same paragraphing decision, their audience might find it off putting, since 
+	academic texts tend to contain longer paragraphs. Understanding what type of text you’re writing and who you’re writing for will therefore 
+	help you determine what length and style of paragraph you might want to aim for.</p>
+
+							<h3>Tips for Writing Strong Paragraphs</h3>
+
+<p>Because paragraphing conventions differ across genres and discourse communities, what makes a good paragraph will be highly dependent on what it 
+	is that you’re writing and who you’re writing it for. With that said, here are a few tips you can try if you’re looking to write stronger 
+	paragraphs:</p>
+<ul>
+<li>Provide evidence and elaborate with audience and intention in mind. Writing instructors are always telling students to “elaborate.” What they 
+	mean is that your paragraphs should probably contain enough background information, evidence, and explanation for them to have their 
+	intended impact on the audience. Ideas that are important to the overall purpose of your text and that the audience is unfamiliar with 
+	will require more evidence and explanation within a paragraph than ideas that are tangential to the text’s purpose or represent facts or 
+	ideas audiences are already very knowledgeable about.</li>
+
+<li>Spell things out and show connections between paragraphs. Remember that readers can’t read your mind. English is what’s known as a writer-responsible 
+	language, which means that readers typically expect writers to explain important points and make important connections for them. In sum, 
+	to strengthen your paragraphs, make connections between ideas and paragraphs explicit and explain how evidence supports your arguments.</li>
+
+<li>Think about the role of each paragraph in the overall text. By definition, a paragraph is only part of the larger text; each paragraph serves 
+	some kind of role in relation to the others. One paragraph’s job might be to intrigue the reader and introduce a claim, another might serve 
+	to provide supporting evidence, explain methodology, or urge the reader to action. Once you understand what role each paragraph plays in the 
+	text as a whole, you can more clearly see what each paragraph needs to contain. Additionally, if you find that you can’t identify the purpose 
+	of a paragraph when looking at the bigger picture, you might consider revising it or removing it entirely.</li>
+
+<li>Defend your paragraphing decisions and keep an open mind. The paragraph is a rhetorical tool. Because there are many valid ways of creating 
+	paragraphs, and just as many mediocre or flat-out bad ways, one of the best things you can do to write stronger paragraphs is just to 
+	practice making thoughtful choices about them. Do your paragraphs follow the expectations of the genre and discourse community you are 
+	writing within? If not, why not? What logic is guiding the organization of your paragraphs? What is that single-sentence paragraph doing 
+	to make your text effective? Why is this section of your paper divided into three paragraphs instead of two? Would it be better the other 
+	way around, or is this structure easier for your audience to read? Your answers will always be subjective and contextual, but these are 
+	the types of questions that will help you take control over your writing.</li>
+							</ul>
+							<h3>Works Cited</h3>
+
+							<p>Duncan, Mike. “Whatever Happened to the Paragraph?” <i>College English</i>, vol. 69, no. 5, 2007, pp. 470-495.</p>
+
+<p>McGee, Iain. “Reconsidering Paragraphing Pedagogy: A Descriptivist Perspective.” <i>English in Education</i>, vol. 50, no. 3, 2016, pp. 233-254.</p>
 
 <h3 id="voice">Voice</h3>
 <p>Voice </p>
