--- a/ENG101 Open Access 2/handbook.html
+++ b/ENG101 Open Access 2/handbook.html
@@ -68,14 +68,13 @@
 <p>The formalization of the paragraph dates back to the mid 1800's when Alexander Bain identified several characteristics for paragraphs that we still follow today.
 							Bain believed that all paragraphs singel a central idea and topic sentences. Conventions for creating 
 							paragraphs exist to help writers organize ideas and thoughts and to help readers digest the writing.</p>
+							
 							<p>"Paragraphs" By Kimberely Smith</p>
 							<p>If you’re like most students, you likely have a lot of experience writing paragraphs. You’ve probably also learned a variety of rules for 
 								composing paragraphs which you may or may not have found helpful. Instruction on paragraph content and organization is practically ubiquitous 
 								in writing handbooks and many high school English classes. But have you ever stopped to consider what a paragraph is really or wondered 
 								how experienced writers use them? This section aims to answer these questions with a level of nuance that will help you succeed in a 
-								college writing context and beyond.</p>
-
-<p>The first thing to know about paragraphs is that they’re notoriously hard to define. The paragraph began as a symbol used in Ancient Greek, but you’re probably more familiar with the paragraph’s modern 
+								college writing context and beyond. The first thing to know about paragraphs is that they’re notoriously hard to define. The paragraph began as a symbol used in Ancient Greek, but you’re probably more familiar with the paragraph’s modern 
 	form—a group of sentences (or sometimes a single sentence) that is set apart from other paragraphs in a text using spacing or indentation. At the most basic level, this is what a paragraph is. It’s a chunk of 
 	writing that makes up a portion of a larger text. This definition doesn’t offer a lot of information about what a paragraph should contain, however, and that question has been the source of a long-running debate in composition.</p>
 
@@ -83,9 +82,7 @@
 	collection of sentences with unity of purpose” in 1866 (qtd. in Duncan 474). Bain’s writing is where we get a number of strict rules for writing 
 	paragraphs, including the notion that paragraphs should always include topic sentences and that all the sentences in a paragraph should discuss 
 	the same idea. Guidelines for paragraphs can be helpful, especially if you’re writing in a strict time limit or if you’re just learning to write 
-	in an academic context; however, the rules we get from Bain can also be incredibly limiting.</p>
-
-<p>You’ve probably noticed that many good paragraphs don’t follow the so-called “rules” you’re familiar with, and that’s because paragraphs are more 
+	in an academic context; however, the rules we get from Bain can also be incredibly limiting. You’ve probably noticed that many good paragraphs don’t follow the so-called “rules” you’re familiar with, and that’s because paragraphs are more 
 	complicated than any formula can capture. If paragraphs can’t be reduced to a single formula, then how should you think about them as a student? 
 	You can understand paragraphs in two ways: as aids for readers and writers and as rhetorical tools governed by discourse conventions.</p>
 
@@ -93,9 +90,7 @@
 
 <p>Paragraphs serve a practical purpose for readers and writers. Paragraphs that are visually distinguished from one another make reading a longer text 
 	more approachable. With paragraphs, you’re less likely to lose your place and more likely to be able to follow the writer’s ideas, especially if 
-	the writer has constructed their paragraphs thoughtfully.</p>
-
-<p>Likewise, paragraphs give writers natural breaks during text construction to pause, take stock of what has been written so far, and think ahead to 
+	the writer has constructed their paragraphs thoughtfully. Likewise, paragraphs give writers natural breaks during text construction to pause, take stock of what has been written so far, and think ahead to 
 	what might be written next (McGee). While you don’t necessarily have to plan out your paragraph breaks before writing, you can use paragraphs 
 	as a tool to mentally organize your ideas and better manage the complex task of writing.</p>
 
@@ -103,9 +98,7 @@
 
 <p>Paragraphs are also rhetorical tools that writers use to achieve their goals. If you gave a room of professional writers a page full of sentences and 
 	asked them to divide the text into paragraphs, you could expect those writers to each come up with different solutions. Which version was better 
-	would depend on what you intended the finished text to accomplish, but many of the versions, perhaps even all of them, would have merits.</p>
-
-<p>Because there is no single formula for creating a “good” paragraph, there are multiple approaches you can take to paragraphing. You might decide to 
+	would depend on what you intended the finished text to accomplish, but many of the versions, perhaps even all of them, would have merits. Because there is no single formula for creating a “good” paragraph, there are multiple approaches you can take to paragraphing. You might decide to 
 	start a new paragraph to emphasize a point at the end of the previous paragraph, to signal a transition to a new idea, to break up extended 
 	discussion of a topic into more manageable chunks, or for many other reasons. In other words, you can think about the paragraph as one tool 
 	that you can use for various purposes and contexts.</p>
